prototype for updating component from fetch + json

--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,13 @@
 
 <body>
     <div id='app'>
+        <tst></tst>
         <div class="search-wrapper">
-            <input type="text" placeholder="Search books.." />
+            <input type="text" placeholder="Search books.." v-model="search" />
         </div>
         <books-grid></books-grid>
     </div>
-    <script src="script.js"></script>
+    <script src=" script.js "></script>
 </body>
 
 
